修复底部弹出菜单在iPad上崩溃的问题(iPad上为popoverView) 清除缓存的右侧显示当前缓存大小  清除缓存现在可以清除地更彻底(删除cache文件夹的所有内容)

--- a/CGSSGuide/Base.lproj/Main.storyboard
+++ b/CGSSGuide/Base.lproj/Main.storyboard
@@ -315,6 +315,7 @@
                     <connections>
                         <outlet property="appVersionLabel" destination="PtN-e6-otR" id="vY0-3H-bms"/>
                         <outlet property="cacheImageCell" destination="EtT-sZ-pNR" id="UVS-0s-VIa"/>
+                        <outlet property="cacheSizeLabel" destination="aJQ-Ij-J1K" id="tTe-qy-Yp4"/>
                         <outlet property="dataVersionLabel" destination="CCB-QY-KRe" id="vLg-eS-gRL"/>
                         <outlet property="downloadAtStartCell" destination="36s-1H-nmN" id="tH2-VQ-vmr"/>
                         <outlet property="fullImageCacheCell" destination="jFB-MI-Y0I" id="bXL-mh-l3E"/>
