新增角色信息部分文件

--- a/CGSSGuide/Base.lproj/Main.storyboard
+++ b/CGSSGuide/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="u1E-LY-NTo" detailTextLabel="pP8-eh-nLh" style="IBUITableViewCellStyleValue1" id="jFB-MI-Y0I">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" textLabel="u1E-LY-NTo" detailTextLabel="pP8-eh-nLh" style="IBUITableViewCellStyleValue1" id="jFB-MI-Y0I">
                                         <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jFB-MI-Y0I" id="Ky6-Al-urz">
