--- a/CGSSGuide/Base.lproj/Main.storyboard
+++ b/CGSSGuide/Base.lproj/Main.storyboard
@@ -515,6 +515,7 @@ http://imascg-slstage-wiki.gamerch.com
 技术支持：
 Chieri
 CaiMiao
+statementreply
 Snack-X
 summertriangle-dev 
 ------------------------------------------
